# haskell-debian-build

./: .hgtags  .travis.yml  LICENSE  README.md  debian-build.cabal
.github/workflows/: cabal-v1.yml  cabal.yml
CI/: env-ghc-7.10.3  env-ghc-7.6.3
debian/: changelog  control  copyright  haskell-debian-build-utils.install  rules  watch
mains/: buildDebian.hs  odebuild.hs
src/Debian/Package/: Build.hs  BuildTool.hs  Cabal.hs  Command.hs  Data.hs  Hackage.hs  Internal.hs  Monad.hs  Source.hs
src/Debian/Package/Data/: Hackage.hs  Packages.hs  Source.hs
