name:                debian-build
version:             0.0.1.0
synopsis:            Debian package build sequence tools
description:         This package provides functions to build
                     debian package from source tree.
homepage:            http://twitter.com/khibino/
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
-- copyright:
category:            Debian
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
                     Debian.Package.Hackage
                     Debian.Package.Monad
                     Debian.Package.Source
                     Debian.Package.Cabal
                     Debian.Package.Command
                     Debian.Package.Build
                     Debian.Package.BuildTool

--  other-modules:

  build-depends:       base <5
                     , filepath
                     , process
                     , directory
                     , transformers
                     , Cabal

  hs-source-dirs:      src
  ghc-options:       -Wall

executable buildDebian
  build-depends:       base <5
                     , debian-build

  main-is: buildDebian.hs
  hs-source-dirs:      mains
  ghc-options:       -Wall
